# vecta

./: Cargo.toml  LICENSE.md  README.md
src/: config.rs  errors.rs  files.rs  indexer.rs  lib.rs  main.rs  system.rs
vecta-cli/: Cargo.toml
vecta-cli/src/: main.rs
vecta-lib/: Cargo.toml
vecta-lib/src/: environment.rs  indexer.rs  lib.rs
