[package]
name = "vecta"
version = "0.1.0"
edition = "2021"


[lib]
name = "vecta"         # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).


[[bin]]
name = "vecta-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
tantivy = "0.22.0"
tempfile = "3.16.0"
walkdir = "2.5.0"
